--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,3 +74,21 @@ jobs:
 #        uses: actions/checkout@v2
 #      - name: Test
 #        run: go test -v --v -tags alltest
+
+  goleveldbtest:
+    strategy:
+      matrix:
+        go-version: [ 1.16.x ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
+    env:
+      DRIVER: goleveldb
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Test
+        run: go test -v --v -tags alltest
