--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,23 +21,23 @@ jobs:
       - name: Test
         run: go test -v --v -tags="alltest osstest"
 
-  hybriddbtest:
-    strategy:
-      matrix:
-        go-version: [ 1.16.x ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-    runs-on: ${{ matrix.os }}
-    env:
-      DRIVER: hybriddb
-    steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Test
-        run: go test -v --v -tags alltest
+#  hybriddbtest:
+#    strategy:
+#      matrix:
+#        go-version: [ 1.16.x ]
+#        os: [ ubuntu-latest, macos-latest, windows-latest ]
+#    runs-on: ${{ matrix.os }}
+#    env:
+#      DRIVER: hybriddb
+#    steps:
+#      - name: Install Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: ${{ matrix.go-version }}
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#      - name: Test
+#        run: go test -v --v -tags alltest
 
 #  ipfstest:
 #    strategy:
