--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,41 +39,50 @@ jobs:
 #      - name: Test
 #        run: go test -v --v -tags alltest
 
-#  ipfstest:
-#    strategy:
-#      matrix:
-#        go-version: [ 1.16.x ]
-#        os: [ ubuntu-latest, macos-latest, windows-latest ]
-#    runs-on: ${{ matrix.os }}
-#    env:
-#      DRIVER: ipfs
-#    steps:
-#      - name: Install Go
-#        uses: actions/setup-go@v2
-#        with:
-#          go-version: ${{ matrix.go-version }}
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#      - name: Test
-#        run: go test -v --v -tags alltest
+  ipfstest:
+    strategy:
+      matrix:
+        go-version: [ 1.16.x ]
+        os: [ ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    env:
+      DRIVER: ipfs
+    steps:
+      - name: Setup Ipfs daemon 
+        run: |
+          sudo mkdir -p /root/ipfs_staging
+          sudo mkdir -p /root/ipfs_data
+          export ipfs_staging=/root/ipfs_staging
+          export ipfs_data=/root/ipfs_data 
+          docker run -d --name ipfs_host -v $ipfs_staging:/export -v $ipfs_data:/data/ipfs -p 4001:4001 -p 8080:8080 -p 5001:5001 ipfs/go-ipfs:latest
+          
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Test
+        run: go test -v --v -tags alltest
 
-#  orbitdbtest:
-#    strategy:
-#      matrix:
-#        go-version: [ 1.16.x ]
-#        os: [ ubuntu-latest, macos-latest, windows-latest ]
-#    runs-on: ${{ matrix.os }}
-#    env:
-#      DRIVER: orbitdb
-#    steps:
-#      - name: Install Go
-#        uses: actions/setup-go@v2
-#        with:
-#          go-version: ${{ matrix.go-version }}
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#      - name: Test
-#        run: go test -v --v -tags alltest
+  orbitdbtest:
+    strategy:
+      matrix:
+        go-version: [ 1.16.x ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
+    env:
+      DRIVER: orbitdb
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Test
+        run: go test -v --v -tags alltest
+
 
   goleveldbtest:
     strategy:
@@ -92,3 +101,4 @@ jobs:
         uses: actions/checkout@v2
       - name: Test
         run: go test -v --v -tags alltest
+
