--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,33 @@ jobs:
 
     - name: Build
       run: make
+
+  build-sqlite:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.16
+
+      - name: Build
+        run: |
+          cd IceFireDB-SQLite
+          make
+
+  build-sqlproxy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.16
+
+      - name: Build
+        run: |
+          cd IceFireDB-SQLProxy
+          make
