--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,23 +72,23 @@ jobs:
       - name: Test
         run: go test -v --v -tags alltest
 
-  orbitdbtest:
-    strategy:
-      matrix:
-        go-version: [ 1.17.x ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-    runs-on: ${{ matrix.os }}
-    env:
-      DRIVER: orbitdb
-    steps:
-      - name: Install Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Test
-        run: go test -v --v -tags alltest
+#  orbitdbtest:
+#    strategy:
+#      matrix:
+#        go-version: [ 1.17.x ]
+#        os: [ ubuntu-latest, macos-latest, windows-latest ]
+#    runs-on: ${{ matrix.os }}
+#    env:
+#      DRIVER: orbitdb
+#    steps:
+#      - name: Install Go
+#        uses: actions/setup-go@v3
+#        with:
+#          go-version: ${{ matrix.go-version }}
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#      - name: Test
+#        run: go test -v --v -tags alltest
 
 
   goleveldbtest:
