feat(icefiredb-pubsub):update dep
Signed-off-by: gitsrc <corerman@gmail.com>

--- a/IceFireDB-PubSub/Dockerfile
+++ b/IceFireDB-PubSub/Dockerfile
@@ -2,8 +2,8 @@ FROM alpine
 
 WORKDIR /root
 
-COPY bin/redisproxy /root/redisproxy
+COPY bin/IceFireDB-PubSub /root/IceFireDB-PubSub
 COPY config/config.yaml /root/config/config.yaml
 
 
-CMD /root/redisproxy -c /root/config/config.yaml
+CMD /root/IceFireDB-PubSub -c /root/config/config.yaml
