feat(sqlproxy):support sqlproxy  p2p node options
Signed-off-by: gitsrc <34047788+gitsrc@users.noreply.github.com>

--- a/IceFireDB-SQLProxy/config/config.yaml
+++ b/IceFireDB-SQLProxy/config/config.yaml
@@ -26,3 +26,5 @@ p2p:
   service_discovery_id: "p2p_sqlproxy_service_test"
   service_command_topic: "p2p_sqlproxy_service_topic_test"
   service_discover_mode: "advertise" # advertise or announce
+  node_host_ip: "127.0.0.1" #local ipv4 ip
+  node_host_port: 0 # any port 
