--- a/IceFireDB-Redis-Proxy/config/config.yaml
+++ b/IceFireDB-Redis-Proxy/config/config.yaml
@@ -11,6 +11,8 @@ p2p:
   service_discovery_id: "p2p_redis_proxy_service_test"
   service_command_topic: "p2p_redis_proxy_service_topic_test"
   service_discover_mode: "advertise" # advertise or announce
+  node_host_ip: "127.0.0.1" #local ipv4 ip
+  node_host_port: 0 # any port 
 
 # remote redis config
 redisdb:
