--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -132,7 +132,7 @@ jobs:
       matrix:
         go-version: [ 1.19.x ]
 #        os: [ ubuntu-latest, macos-latest ]
-        os: [ ubuntu-latest ]
+        os: [ ubuntu-latest,windows-latest  ]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: ipfs-log
