--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.19.x]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest , windows-latest]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: oss
@@ -50,7 +50,7 @@ jobs:
     strategy:
       matrix:
         go-version: [ 1.19.x ]
-        os: [ ubuntu-latest]
+        os: [ ubuntu-latest, macos-latest , windows-latest]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: ipfs
@@ -113,7 +113,7 @@ jobs:
     strategy:
       matrix:
         go-version: [ 1.19.x ]
-        os: [ ubuntu-latest, macos-latest ]
+        os: [ ubuntu-latest, macos-latest , windows-latest]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: crdt
@@ -131,7 +131,7 @@ jobs:
     strategy:
       matrix:
         go-version: [ 1.19.x ]
-        os: [ ubuntu-latest, macos-latest ]
+        os: [ ubuntu-latest, macos-latest , windows-latest ]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: ipfs-log
