--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -113,7 +113,7 @@ jobs:
     strategy:
       matrix:
         go-version: [ 1.19.x ]
-        os: [ ubuntu-latest, macos-latest , windows-latest]
+        os: [ ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: crdt
