--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,16 @@ jobs:
       matrix:
         go-version: [1.22.x]
         os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: oss
     steps:
-      - name: start minlo
-        run: docker run -p 9000:9000 -p 9001:9001 -e "MINIO_ROOT_USER=AKIAIOSFODNN7EXAMPLE" -e "MINIO_ROOT_PASSWORD=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY" -d quay.io/minio/minio server /data --console-address ":9001"
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -33,20 +36,18 @@ jobs:
   ipfstest:
     strategy:
       matrix:
-        go-version: [ 1.22.x ]
-        os: [ ubuntu-latest]
+        go-version: [1.22.x]
+        os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: ipfs
     steps:
-      - name: Setup Ipfs daemon 
-        run: |
-          sudo mkdir -p /root/ipfs_staging
-          sudo mkdir -p /root/ipfs_data
-          export ipfs_staging=/root/ipfs_staging
-          export ipfs_data=/root/ipfs_data 
-          docker run -d --name ipfs_host -v $ipfs_staging:/export -v $ipfs_data:/data/ipfs -p 4001:4001 -p 8080:8080 -p 5001:5001 ipfs/go-ipfs:latest
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -60,13 +61,18 @@ jobs:
   goleveldbtest:
     strategy:
       matrix:
-        go-version: [ 1.22.x ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        go-version: [1.22.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: goleveldb
     steps:
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -80,13 +86,18 @@ jobs:
   crdtdbtest:
     strategy:
       matrix:
-        go-version: [ 1.22.x ]
-        os: [ ubuntu-latest, macos-latest]
+        go-version: [1.22.x]
+        os: [ubuntu-latest, macos-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: crdt
     steps:
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -100,13 +111,18 @@ jobs:
   ipfslogdbtest:
     strategy:
       matrix:
-        go-version: [ 1.22.x ]
-        os: [ ubuntu-latest, macos-latest , windows-latest ]
+        go-version: [1.22.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: ipfs-log
     steps:
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
