--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,16 +13,13 @@ jobs:
       matrix:
         go-version: [1.22.x]
         os: [ubuntu-latest]
-        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: oss
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Set up Go
+      - name: start minio
+        run: docker run -p 9000:9000 -p 9001:9001 -e "MINIO_ROOT_USER=AKIAIOSFODNN7EXAMPLE" -e "MINIO_ROOT_PASSWORD=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY" -d quay.io/minio/minio server /data --console-address ":9001"
+      - name: Install Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -36,18 +33,20 @@ jobs:
   ipfstest:
     strategy:
       matrix:
-        go-version: [1.22.x]
-        os: [ubuntu-latest]
-        arch: [amd64, arm64, armv5, armv6, armv7]
+        go-version: [ 1.22.x ]
+        os: [ ubuntu-latest]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: ipfs
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Set up Go
+      - name: Setup Ipfs daemon 
+        run: |
+          sudo mkdir -p /root/ipfs_staging
+          sudo mkdir -p /root/ipfs_data
+          export ipfs_staging=/root/ipfs_staging
+          export ipfs_data=/root/ipfs_data 
+          docker run -d --name ipfs_host -v $ipfs_staging:/export -v $ipfs_data:/data/ipfs -p 4001:4001 -p 8080:8080 -p 5001:5001 ipfs/go-ipfs:latest
+      - name: Install Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -61,18 +60,13 @@ jobs:
   goleveldbtest:
     strategy:
       matrix:
-        go-version: [1.22.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        arch: [amd64, arm64, armv5, armv6, armv7]
+        go-version: [ 1.22.x ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: goleveldb
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Set up Go
+      - name: Install Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -86,18 +80,13 @@ jobs:
   crdtdbtest:
     strategy:
       matrix:
-        go-version: [1.22.x]
-        os: [ubuntu-latest, macos-latest]
-        arch: [amd64, arm64, armv5, armv6, armv7]
+        go-version: [ 1.22.x ]
+        os: [ ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: crdt
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Set up Go
+      - name: Install Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -111,18 +100,13 @@ jobs:
   ipfslogdbtest:
     strategy:
       matrix:
-        go-version: [1.22.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        arch: [amd64, arm64, armv5, armv6, armv7]
+        go-version: [ 1.22.x ]
+        os: [ ubuntu-latest, macos-latest , windows-latest ]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: ipfs-log
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Set up Go
+      - name: Install Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
