--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,16 @@ jobs:
       matrix:
         go-version: [1.22.x]
         os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: oss
     steps:
-      - name: start minio
-        run: docker run -p 9000:9000 -p 9001:9001 -e "MINIO_ROOT_USER=AKIAIOSFODNN7EXAMPLE" -e "MINIO_ROOT_PASSWORD=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY" -d quay.io/minio/minio server /data --console-address ":9001"
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -27,6 +30,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: go mod tidy && go mod vendor
+      - name: Start MinIO
+        run: docker run -p 9000:9000 -p 9001:9001 -e "MINIO_ROOT_USER=AKIAIOSFODNN7EXAMPLE" -e "MINIO_ROOT_PASSWORD=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY" -d quay.io/minio/minio server /data --console-address ":9001"
       - name: Test
         run: go test -v -tags="alltest osstest"
 
