--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,13 +71,18 @@ jobs:
   goleveldbtest:
     strategy:
       matrix:
-        go-version: [ 1.22.x ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        go-version: [1.22.x]
+        os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: goleveldb
     steps:
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -87,17 +92,23 @@ jobs:
         run: go mod tidy && go mod vendor
       - name: Test
         run: go test -v -tags alltest
+
 
   crdtdbtest:
     strategy:
       matrix:
-        go-version: [ 1.22.x ]
-        os: [ ubuntu-latest, macos-latest]
+        go-version: [1.22.x]
+        os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: crdt
     steps:
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
@@ -108,16 +119,22 @@ jobs:
       - name: Test
         run: go test -v -tags alltest
 
+
   ipfslogdbtest:
     strategy:
       matrix:
-        go-version: [ 1.22.x ]
-        os: [ ubuntu-latest, macos-latest , windows-latest ]
+        go-version: [1.22.x]
+        os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
     runs-on: ${{ matrix.os }}
     env:
       DRIVER: ipfs-log
     steps:
-      - name: Install Go
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go-version }}
