--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,6 +68,39 @@ jobs:
         run: go test -v -tags alltest
 
 
+  ipfssynckvtest:
+    strategy:
+      matrix:
+        go-version: [1.24.1]
+        os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
+    runs-on: ${{ matrix.os }}
+    env:
+      DRIVER: ipfs-synckv
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: go mod tidy && go mod vendor
+      - name: Setup Ipfs daemon 
+        run: |
+          sudo mkdir -p /root/ipfs_staging
+          sudo mkdir -p /root/ipfs_data
+          export ipfs_staging=/root/ipfs_staging
+          export ipfs_data=/root/ipfs_data 
+          docker run -d --name ipfs_host -v $ipfs_staging:/export -v $ipfs_data:/data/ipfs -p 4001:4001 -p 8080:8080 -p 5001:5001 ipfs/go-ipfs:latest
+      - name: Test
+        run: go test -v -tags alltest
+
+
   goleveldbtest:
     strategy:
       matrix:
