--- a/IceFireDB-SQLProxy/config/config.yaml
+++ b/IceFireDB-SQLProxy/config/config.yaml
@@ -8,7 +8,7 @@ debug:  # Control to enable debug mode
 # mysql configurations for different access levels
 mysql:
   admin:
-    addr: "192.168.2.80:3306"
+    addr: "127.0.0.1:3306"
     user: "admin_user"
     password: "admin_pass"
     dbname: "exampledb"
@@ -16,7 +16,7 @@ mysql:
     maxAlive: 64
     maxIdle: 4
   readonly:
-    addr: "192.168.2.80:3306"
+    addr: "127.0.0.1:3306"
     user: "readonly_user"
     password: "readonly_pass"
     dbname: "exampledb"
@@ -26,22 +26,16 @@ mysql:
 
 # Tenant list
 userlist:
-  - user: root
-    password: 123456
+  - user: host1
+    password: host1
 
 # p2p config for different access levels
 p2p:
-  admin:
-    enable: false
-    service_discovery_id: "p2p_sqlproxy_admin_service"
-    service_command_topic: "p2p_sqlproxy_admin_topic"
-    service_discover_mode: "advertise"
-    node_host_ip: "127.0.0.1"
-    node_host_port: 0
-  readonly:
-    enable: false
-    service_discovery_id: "p2p_sqlproxy_readonly_service"
-    service_command_topic: "p2p_sqlproxy_readonly_topic"
-    service_discover_mode: "advertise"
-    node_host_ip: "127.0.0.1"
-    node_host_port: 0
+  enable: true
+  serviceDiscoveryId: "tanovo_sqlproxy_admin_service"
+  serviceCommandTopic: "tanovo_sqlproxy_command_topic"
+  adminTopic: "tanovo_sqlproxy_admin_topic"
+  readonlyTopic: "tanovo_sqlproxy_readonly_topic"
+  serviceDiscoverMode: "advertise"
+  nodeHostIp: "127.0.0.1"
+  nodeHostPort: 0
