--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -200,3 +200,28 @@ jobs:
         run: go mod tidy && go mod vendor
       - name: Test
         run: go test -v -tags alltest
+
+  hybriddbtest:
+    strategy:
+      matrix:
+        go-version: [1.24.1]
+        os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
+    runs-on: ${{ matrix.os }}
+    env:
+      DRIVER: hybriddb
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: go mod tidy && go mod vendor
+      - name: Test
+        run: go test -v -tags alltest
