test: add comprehensive test suite and CI integration for IceFireDB-SQLite
Signed-off-by: gitsrc <34047788+gitsrc@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,11 @@ jobs:
           cd IceFireDB-SQLite
           go mod tidy && go mod vendor
 
+      - name: Run tests
+        run: |
+          cd IceFireDB-SQLite
+          make test
+
       - name: Build
         run: |
           cd IceFireDB-SQLite
