--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -251,6 +251,9 @@ jobs:
         os: [ubuntu-latest]
         arch: [amd64, arm64]
     runs-on: ${{ matrix.os }}
+    env:
+      CI: true
+      GITHUB_ACTIONS: true
     steps:
       - name: Set up Go
         uses: actions/setup-go@v6
