--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -243,3 +243,26 @@ jobs:
         run: go mod tidy && go mod vendor
       - name: Run hybriddb unit tests
         run: go test -v -count=1 ./driver/hybriddb/...
+
+  sqlite-test:
+    strategy:
+      matrix:
+        go-version: [1.25.2]
+        os: [ubuntu-latest]
+        arch: [amd64, arm64, armv5, armv6, armv7]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v5
+      - name: Install dependencies
+        run: go mod tidy && go mod vendor
+      - name: Run SQLite tests
+        run: cd IceFireDB-SQLite && go test -v -count=1 ./...
