--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -243,3 +243,21 @@ jobs:
         run: go mod tidy && go mod vendor
       - name: Run hybriddb unit tests
         run: go test -v -count=1 ./driver/hybriddb/...
+
+  sqlite-unit-test:
+    strategy:
+      matrix:
+        go-version: [1.25.2]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v5
+      - name: Install dependencies
+        run: go mod tidy && go mod vendor
+      - name: Run SQLite unit tests
+        run: cd IceFireDB-SQLite && go test -v -count=1 ./internal/sqlite/...
